Fix cart add quantity and transactional persistence